others/agc/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: alb-ns
  annotations:
    alb.networking.azure.io/alb-namespace: alb-ns
    alb.networking.azure.io/alb-name: alb-demo
spec:
  gatewayClassName: azure-alb-external
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
          # from: Selector
          # selector:
          #   matchLabels:
          #     shared-gateway-access: "true"
