others/agc/03-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: network-app-route
  namespace: network-app
spec:
  parentRefs:
    - name: app-gateway
      namespace: alb-ns
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: network-app-internal-svc
          port: 80
