others/agc/04-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: network-app-route
  namespace: network-app
spec:
  parentRefs:
    - kind: Gateway
      name: app-gateway
      namespace: alb-ns
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: network-app-svc
          port: 80
